# RL-agent-play-Mini-Motorway

./: .gitignore  CLAUDE.md  INITIAL.md  README.md  Reward.md  calibration.json  docs.md  pyproject.toml  run.md  test_environment.py  test_rewards.py
examples/: README_DQN.md  train_dqn.py
scripts/: demo.sh
src/motorways/: __init__.py  environment.py
src/motorways.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/motorways/app/: __init__.py  main.py
src/motorways/capture/: __init__.py  mac_pyautogui.py  mac_quartz.py  preprocess.py  toolbar_detection.py
src/motorways/config/: defaults.py  schema.py
src/motorways/control/: __init__.py  mapping.py  mouse.py
src/motorways/policy/: __init__.py  action_space.py  loader.py
src/motorways/rewards/: __init__.py  base.py  shaped.py  utils.py  validation.py
src/motorways/utils/: __init__.py  logging.py  permissions.py
templates/: prp_base.md
tests/: test_mapping.py  test_permissions.py  test_policy_loader.py  test_preprocess.py
validation_results/: ShapedRewardCalculator_validation.json
